# RL-moutigroup-fairness

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: demo.yaml  schema_demo.json
data/demo/: demo.csv  groups.json
docs/: index.md
examples/: quickstart_synthetic.py  run_with_csv.py
examples/configs/: example_config.yaml
rl-multigroup-fairness-rl/: README.md  pyproject.toml  requirements.txt
rl-multigroup-fairness-rl/examples/: dummy_preds.csv
rl-multigroup-fairness-rl/notebooks/: RL_FAIR1.ipynb
rl-multigroup-fairness-rl/scripts/: prep_data.py  train.sh
rl-multigroup-fairness-rl/src/rl_fair/: data.py  eval.py  rewards.py
rl-multigroup-fairness-rl/tests/: test_import.py
rl_fair/: __init__.py  cli.py  config.py  grouping.py  privacy.py  resampling.py
rl_fair/metrics/: __init__.py  abroca.py  classification.py
rl_fair/models/: __init__.py  sklearn_wrapper.py
rl_fair/rl/: __init__.py  dqn_agent.py  env.py  replay_buffer.py  train.py
src/rl_fair/: env.py  metrics.py  notebook_export.py  train.py
src/rlmgf/: __init__.py  cli.py  data.py  env.py  eval.py  explain.py  metrics.py  registry.py  rewards.py  trainer.py
tests/: test_data.py  test_grouping.py  test_metrics.py  test_resampling.py
