[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-mg-fairness"
version = "0.1.0"
description = "Pluggable RL-based pre-processing for multi-group fairness"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{name="RL Multi-Group Fairness Contributors"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "pyyaml>=6.0",
  "tqdm>=4.64",
  "rich>=13",
  "typer>=0.9",
  "pydantic>=2",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "xgboost>=2.0"
]

[project.scripts]
rlmgf = "rlmgf.cli:app"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
