[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-fair-toolkit"
version = "0.1.0"
description = "Pluggable RL-based dataset reweighting for fairness/accuracy trade-offs (no data included)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Community"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
rl-fair = "rl_fair.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_fair*"]
