[project]
name = "rl-fair"
version = "0.1.0"
description = "Reinforcement learning for multi-group fairness"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Fan Zhang"}]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/yourname/rl-multigroup-fairness-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rl_fair" = ["*.yaml"]
